--- a/site/src/main/webapp/WEB-INF/templates/catalog/category.html
+++ b/site/src/main/webapp/WEB-INF/templates/catalog/category.html
@@ -4,7 +4,7 @@
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 
-<head th:include="/layout/partials/head (pageTitle=${category.name + ' - Broadleaf Demo - Heat Clinic'})"></head>
+<head th:include="layout/partials/head (pageTitle=${category.name + ' - Broadleaf Demo - Heat Clinic'})"></head>
 
 <body>
     <div id="notification_bar"></div>
